--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,11 @@
 .App {
   text-align: center;
+  /* background-color: #fafbfb; */
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 6vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
